--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 </head>
 
 <body>
+    <nav>
+        <div class="logo">
+            <img src="./src/logo.svg" alt="">
+        </div>
+    </nav>
     <div class="flipper-board">
-        <div class="flipper-tile">
-            <div class="flipper-tilewrap"
-                ontouchstart="this.classList.add('istouchdevice');this.classList.toggle('hover');">
+        <div class="flipper-tile vertical">
+            <div class="flipper-tilewrap">
                 <div class="flipper-tilefront">
-                    First tile front
-                </div>
-                <div class="flipper-tileback">
                     <blockquote class="twitter-tweet">
                         <p lang="pt" dir="ltr">Quer saber o que o <a
                                 href="https://twitter.com/FalleNCS?ref_src=twsrc%5Etfw">@FalleNCS</a> passou no pause
@@ -33,15 +34,14 @@
                     </blockquote>
                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
-            </div>
-        </div>
-        <div class="flipper-tile vertical">
-            <div class="flipper-tilewrap">
-                <div class="flipper-tilefront">
-                    Another tile front
-                </div>
                 <div class="flipper-tileback">
-                    Another tile back
+                    <blockquote class="twitter-tweet">
+                        <p lang="zxx" dir="ltr"><a href="https://t.co/IrAx1gxll9">pic.twitter.com/IrAx1gxll9</a></p>
+                        &mdash; jrgandara (@jrgandara) <a
+                            href="https://twitter.com/jrgandara/status/1578367300830253056?ref_src=twsrc%5Etfw">October
+                            7, 2022</a>
+                    </blockquote>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
         </div>
