--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         .swiper {
-            margin: 100px auto;
+            margin: 5px auto;
             width: 320px;
             height: 640px;
         }
@@ -87,10 +87,28 @@
         .swiper-slide:nth-child(10n) {
             background-color: rgb(54, 94, 77);
         }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .logo {
+            margin-top: 1em;
+            width: 15vh;
+            align-self: center;
+
+        }
     </style>
 </head>
 
 <body>
+    <nav>
+        <div class="logo">
+            <img src="./src/logo.svg" alt="">
+        </div>
+    </nav>
     <!-- Swiper -->
 
 
@@ -141,7 +159,7 @@
     <script>
 
         var swiper4 = new Swiper(".mySwiper4", {
-            grabCursor: true,
+            grabCursor: false,
             effect: "creative",
             direction: 'vertical',
             creativeEffect: {
